updating docker file with sentence transformer library

--- a/python_backend_models/Dockerfile
+++ b/python_backend_models/Dockerfile
@@ -3,7 +3,7 @@ FROM nvcr.io/nvidia/tritonserver:21.05-py3
 COPY ./python_backend python_backend
 RUN cd python_backend \
     && /usr/bin/python3 -m pip install --upgrade pip \
-    && pip install --no-cache-dir torch==1.8.1 transformers==4.6.0 tokenizers==0.10.2 
+    && pip install --no-cache-dir torch==1.8.1 transformers==4.6.0 tokenizers==0.10.2 sentence-transformers
 
 WORKDIR python_backend
 
